If applied, this adds passphrase inputs with one validation still to be implemented

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -252,7 +252,7 @@
         key: "relationshipToClientThirdParty"
       },
       {
-        label: t('forms.clientDetails.thirdParty.passphrase'),
+        label: t('forms.clientDetails.thirdParty.passphrase.title'),
         key: "passphraseContent",
         html: true
       }
