Fixes to render the client details heading

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -86,7 +86,7 @@
   passphraseContent: passphraseContent
 } %}
 
-<h2 class="govuk-heading-m">{{ t.pages.caseDetails.clientDetails.heading }}</h2>
+<h2 class="govuk-heading-m">{{ t('pages.caseDetails.clientDetails.heading') }}</h2>
 {# Client info summary card #}
 {{ summaryCardComponent({
   data: constructedData,
