EL-2460: Add third party details (#252)
* If applied, this adds the client third party name filed.

* If applied, this adds the email address input

* If applied, this adds the contactNumber & safeToCall input fields for thirdParty

* If applied, this add address & postcode fields.

* If applied, this resolves linting

* If applied, this adds in the relationship to client input (and removes not needed validation)

* If applied, this adds passphrase inputs with one validation still to be implemented

* If applied, this adjusts error messages & how we handle existing fields and tries to add in schema for passphrase

* If applied, this updates controller and template

* If applied, this updates validation but has linting issue.

* If applied, this tidies up the validation but still has linting issues.

* If applied, this updates the JSDoc

* skip gov frontend link

* the actual v5 upgrade

* EL-2466 MCC: Remove third party details (#251)

* Update views to show remove confirmation page

* Updates route and adds controller

* Adds remove functionality implementing the endpoint

* Adds unit test for the controller

* Updates confirmation page as component

* Adds idempotent DELETE logic

* Updates endpoint to add thirdparty

* Fixes to render the client details heading

* Updates helper file to include new helpers

---------

Co-authored-by: Sandy Ryalls <sandy.ryalls@justice.gov.uk>
Co-authored-by: Imtiaz Ahmed <90189839+imtiazAhmd@users.noreply.github.com>
Co-authored-by: imtiazAhmd <imtiaz.ahmed@digital.justice.gov.uk>

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -86,7 +86,7 @@
   passphraseContent: passphraseContent
 } %}
 
-<h2 class="govuk-heading-m">{{ t.pages.caseDetails.clientDetails.heading }}</h2>
+<h2 class="govuk-heading-m">{{ t('pages.caseDetails.clientDetails.heading') }}</h2>
 {# Client info summary card #}
 {{ summaryCardComponent({
   data: constructedData,
@@ -248,11 +248,11 @@
         key: "emailAddressThirdParty"
       },
       {
-        label: t('forms.clientDetails.thirdParty.relationshipToClient'),
+        label: t('forms.clientDetails.thirdParty.relationshipToClient.title'),
         key: "relationshipToClientThirdParty"
       },
       {
-        label: t('forms.clientDetails.thirdParty.passphrase'),
+        label: t('forms.clientDetails.thirdParty.passphrase.title'),
         key: "passphraseContent",
         html: true
       }
@@ -260,6 +260,7 @@
   }) }}
 {% else %}
   {{ govukButton({
+    href: "/cases/" + data.caseReference + "/add/third-party",
     text: t('pages.caseDetails.buttons.addThirdPartyContact'),
     classes: "govuk-button--secondary"
   }) }}
