If applied, this skips building the row in `Client support needs` summary card when the value is empty or `no`

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -175,6 +175,7 @@
   {{ summaryCardComponent({
     data: constructedData,
     card: {
+      id: "client-support-needs",
       title: {
         text: t('pages.caseDetails.clientDetails.clientSupportNeeds')
       },
