changed contact number to phone number in json

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -266,7 +266,7 @@
         key: "fullNameThirdParty"
       },
       {
-        label: t('forms.clientDetails.thirdParty.contactNumber'),
+        label: t('forms.clientDetails.thirdParty.phoneNumber'),
         key: "computedPhoneNumberThirdParty",
         html: true
       },
