--- a/views/case_details/third_party_details/_form.njk
+++ b/views/case_details/third_party_details/_form.njk
@@ -38,7 +38,7 @@
 
   {{ govukInput({
     label: {
-      text: t('forms.clientDetails.thirdParty.contactNumberHeading'),
+      text: t('forms.clientDetails.thirdParty.phoneNumberHeading'),
       classes: "govuk-text--m"
     },
     errorMessage: errorMessages.thirdPartyContactNumber if error,
