If applied, this reverts the heading and column size, on confirmation page.

--- a/views/components/confirmationComponent.njk
+++ b/views/components/confirmationComponent.njk
@@ -38,8 +38,8 @@
 
 {% macro confirmationComponent(params) %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-l">{{ params.heading }}</h1>
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">{{ params.heading }}</h1>
 
       <p class="govuk-body">{{ params.description }}</p>
 
