--- a/views/components/confirmationComponent.njk
+++ b/views/components/confirmationComponent.njk
@@ -38,7 +38,7 @@
 
 {% macro confirmationComponent(params) %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-xl">{{ params.heading }}</h1>
 
       <p class="govuk-body">{{ params.description }}</p>
