--- a/views/components/confirmationComponent.njk
+++ b/views/components/confirmationComponent.njk
@@ -39,7 +39,7 @@
 {% macro confirmationComponent(params) %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-l">{{ params.heading }}</h1>
+      <h1 class="govuk-heading-xl">{{ params.heading }}</h1>
 
       <p class="govuk-body">{{ params.description }}</p>
 
